upcxx-2023.9.0/test/neg/neg-as_rpc6.errc
Deserialized type of all as_rpc arguments must be MoveConstructible.
